# moniOS

./: .gitignore  LICENCE  LICENCE-GPL-2.0  LICENSE  LICENSE-Apache-2.0  LICENSE-GPL-2.0  README.md  README.mdx  README.zh-CN.md  app.py  dashboard_os_info.html  monios.sh  osinfo.sh  pyproject.toml  requirements.txt  start.sh
static/: dashboard_os_info.html  dashboard_os_info_copy.html  terminal.html
static/css/: doucumentgetway.css  htop.css  iftop.css  main.css  nav.css  osquery.css  process.css  refresh.css  sidebar.css  status.css  terminal.css
static/js/: api_client.js  file-transfer.js  iftop.js  main.js  network-chart.js  osquery.js  tailwind.config.js  terminal.js
utils/: __init__.py  logger.py  network_history.json  network_info.py  osquery_handler.py  process_info.py  ssh_manager.py  system_info.py  user_info.py
