[project]
name = "monios"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.3",
    "flask-cors>=5.0.0",
    "flask-socketio>=5.5.1",
    "netifaces>=0.11.0",
    "paramiko>=3.5.1",
    "psutil>=7.1.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true